// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<SeparatorView /> > renders Default story 1`] = `
<div>
  <div
    style="height: 600px;"
  >
    <div
      data-group="true"
      data-testid="react-use-id-1"
      id="react-use-id-1"
      style="height: 100%; width: 100%; overflow: hidden; display: flex; flex-flow: row; touch-action: pan-y;"
    >
      <div
        data-panel="true"
        data-testid="react-use-id-2"
        id="react-use-id-2"
        style="min-height: 0px; max-height: 100%; height: auto; min-width: 0px; max-width: 100%; width: auto; border: 0px; padding: 0px; margin: 0px; display: flex; flex: 0 1 0px; overflow: visible;"
      >
        <div
          style="max-height: 100%; max-width: 100%; flex-grow: 1; overflow: auto; touch-action: pan-y;"
        >
          <div
            class="Flex-module_flex"
            style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: center; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
            tabindex="0"
          >
            LEFT CONTENT
          </div>
        </div>
      </div>
      <div
        aria-controls="react-use-id-2"
        aria-label="Click or drag to expand"
        aria-orientation="vertical"
        aria-valuemax="99.502"
        aria-valuemin="0"
        aria-valuenow="0"
        class="SeparatorView-module_separator Separator"
        data-separator="inactive"
        data-separator-type="bar"
        data-testid="react-use-id-3"
        id="react-use-id-3"
        role="separator"
        style="flex: 0 0 auto; touch-action: none;"
        tabindex="0"
      >
        <svg
          fill="currentColor"
          height="12px"
          transform="rotate(90)"
          viewBox="3.999704360961914 8.999704360961914 16.000295639038086 6.000591278076172"
          width="20px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 15a.97.97 0 0 1-.713-.287A.97.97 0 0 1 4 14q0-.424.287-.713A.97.97 0 0 1 5 13h14q.424 0 .712.287.288.288.288.713 0 .424-.288.713A.97.97 0 0 1 19 15zm0-4a.97.97 0 0 1-.713-.287A.97.97 0 0 1 4 10q0-.424.287-.713A.97.97 0 0 1 5 9h14q.424 0 .712.287Q20 9.576 20 10t-.288.713A.97.97 0 0 1 19 11z"
          />
        </svg>
      </div>
      <div
        data-panel="true"
        data-testid="react-use-id-4"
        id="react-use-id-4"
        style="min-height: 0px; max-height: 100%; height: auto; min-width: 0px; max-width: 100%; width: auto; border: 0px; padding: 0px; margin: 0px; display: flex; flex: 100 1 0px; overflow: visible;"
      >
        <div
          style="max-height: 100%; max-width: 100%; flex-grow: 1; overflow: auto; touch-action: pan-y;"
        >
          <div
            class="Flex-module_flex"
            style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: center; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
          >
            MAIN CONTENT
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SeparatorView /> > renders HoverWhenCollapsed story 1`] = `
<div>
  <div
    style="height: 600px;"
  >
    <div
      data-group="true"
      data-testid="react-use-id-1"
      id="react-use-id-1"
      style="height: 100%; width: 100%; overflow: hidden; display: flex; flex-flow: row; touch-action: pan-y;"
    >
      <div
        data-panel="true"
        data-testid="react-use-id-2"
        id="react-use-id-2"
        style="min-height: 0px; max-height: 100%; height: auto; min-width: 0px; max-width: 100%; width: auto; border: 0px; padding: 0px; margin: 0px; display: flex; flex: 0 1 0px; overflow: visible;"
      >
        <div
          style="max-height: 100%; max-width: 100%; flex-grow: 1; overflow: auto; touch-action: pan-y;"
        >
          <div
            class="Flex-module_flex"
            style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: center; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
            tabindex="0"
          >
            LEFT CONTENT
          </div>
        </div>
      </div>
      <div
        aria-controls="react-use-id-2"
        aria-label="Click or drag to expand"
        aria-orientation="vertical"
        aria-valuemax="99.502"
        aria-valuemin="0"
        aria-valuenow="0"
        class="SeparatorView-module_separator Separator"
        data-separator="inactive"
        data-separator-type="bar"
        data-testid="react-use-id-3"
        id="react-use-id-3"
        role="separator"
        style="flex: 0 0 auto; touch-action: none;"
        tabindex="0"
      >
        <svg
          fill="currentColor"
          height="12px"
          transform="rotate(90)"
          viewBox="3.999704360961914 8.999704360961914 16.000295639038086 6.000591278076172"
          width="20px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 15a.97.97 0 0 1-.713-.287A.97.97 0 0 1 4 14q0-.424.287-.713A.97.97 0 0 1 5 13h14q.424 0 .712.287.288.288.288.713 0 .424-.288.713A.97.97 0 0 1 19 15zm0-4a.97.97 0 0 1-.713-.287A.97.97 0 0 1 4 10q0-.424.287-.713A.97.97 0 0 1 5 9h14q.424 0 .712.287Q20 9.576 20 10t-.288.713A.97.97 0 0 1 19 11z"
          />
        </svg>
      </div>
      <div
        data-panel="true"
        data-testid="react-use-id-4"
        id="react-use-id-4"
        style="min-height: 0px; max-height: 100%; height: auto; min-width: 0px; max-width: 100%; width: auto; border: 0px; padding: 0px; margin: 0px; display: flex; flex: 100 1 0px; overflow: visible;"
      >
        <div
          style="max-height: 100%; max-width: 100%; flex-grow: 1; overflow: auto; touch-action: pan-y;"
        >
          <div
            class="Flex-module_flex"
            style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: center; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
          >
            MAIN CONTENT
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SeparatorView /> > renders HoverWhenExpanded story 1`] = `
<div>
  <div
    style="height: 600px;"
  >
    <div
      data-group="true"
      data-testid="react-use-id-1"
      id="react-use-id-1"
      style="height: 100%; width: 100%; overflow: hidden; display: flex; flex-flow: row; touch-action: pan-y;"
    >
      <div
        style="height: 600px; width: 200px;"
      />
      <div
        data-panel="true"
        data-testid="react-use-id-2"
        id="react-use-id-2"
        style="min-height: 0px; max-height: 100%; height: auto; min-width: 0px; max-width: 100%; width: auto; border: 0px; padding: 0px; margin: 0px; display: flex; flex: 0 1 0px; overflow: visible;"
      >
        <div
          style="max-height: 100%; max-width: 100%; flex-grow: 1; overflow: auto; touch-action: pan-y;"
        >
          <div
            class="Flex-module_flex"
            style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: center; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
            tabindex="0"
          >
            LEFT CONTENT
          </div>
        </div>
      </div>
      <div
        aria-controls="react-use-id-2"
        aria-label="Click or drag to expand"
        aria-orientation="vertical"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="SeparatorView-module_separator Separator"
        data-separator="inactive"
        data-separator-type="border"
        data-testid="react-use-id-3"
        id="react-use-id-3"
        role="separator"
        style="flex: 0 0 auto; touch-action: none;"
        tabindex="0"
      >
        <div
          class="SeparatorView-module_activeSeparatorContainer"
        >
          <div
            class="SeparatorView-module_activeSeparator"
          />
        </div>
      </div>
      <div
        data-panel="true"
        data-testid="react-use-id-4"
        id="react-use-id-4"
        style="min-height: 0px; max-height: 100%; height: auto; min-width: 0px; max-width: 100%; width: auto; border: 0px; padding: 0px; margin: 0px; display: flex; flex: 100 1 0px; overflow: visible;"
      >
        <div
          style="max-height: 100%; max-width: 100%; flex-grow: 1; overflow: auto; touch-action: pan-y;"
        >
          <div
            class="Flex-module_flex"
            style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: center; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
          >
            MAIN CONTENT
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SeparatorView /> > renders KeyboardFocused story 1`] = `
<div>
  <div
    style="height: 600px;"
  >
    <div
      data-group="true"
      data-testid="react-use-id-1"
      id="react-use-id-1"
      style="height: 100%; width: 100%; overflow: hidden; display: flex; flex-flow: row; touch-action: pan-y;"
    >
      <div
        data-panel="true"
        data-testid="react-use-id-2"
        id="react-use-id-2"
        style="min-height: 0px; max-height: 100%; height: auto; min-width: 0px; max-width: 100%; width: auto; border: 0px; padding: 0px; margin: 0px; display: flex; flex: 48.426 1 0px; overflow: visible;"
      >
        <div
          style="max-height: 100%; max-width: 100%; flex-grow: 1; overflow: auto; touch-action: pan-y;"
        >
          <div
            class="Flex-module_flex"
            style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: center; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
            tabindex="0"
          >
            LEFT CONTENT
          </div>
        </div>
      </div>
      <div
        aria-controls="react-use-id-2"
        aria-label="Click or drag to expand"
        aria-orientation="vertical"
        aria-valuemax="96.852"
        aria-valuemin="0"
        aria-valuenow="48.426"
        class="SeparatorView-module_separator Separator"
        data-separator="inactive"
        data-separator-type="border"
        data-testid="react-use-id-3"
        id="react-use-id-3"
        role="separator"
        style="flex: 0 0 auto; touch-action: none;"
        tabindex="0"
      >
        <div
          class="SeparatorView-module_activeSeparatorContainer"
        >
          <div
            class="SeparatorView-module_activeSeparator"
          />
        </div>
      </div>
      <div
        data-panel="true"
        data-testid="react-use-id-4"
        id="react-use-id-4"
        style="min-height: 0px; max-height: 100%; height: auto; min-width: 0px; max-width: 100%; width: auto; border: 0px; padding: 0px; margin: 0px; display: flex; flex: 51.574 1 0px; overflow: visible;"
      >
        <div
          style="max-height: 100%; max-width: 100%; flex-grow: 1; overflow: auto; touch-action: pan-y;"
        >
          <div
            class="Flex-module_flex"
            style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: center; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
          >
            MAIN CONTENT
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SeparatorView /> > renders LeftPanelExpanded story 1`] = `
<div>
  <div
    style="height: 600px;"
  >
    <div
      data-group="true"
      data-testid="react-use-id-1"
      id="react-use-id-1"
      style="height: 100%; width: 100%; overflow: hidden; display: flex; flex-flow: row; touch-action: pan-y;"
    >
      <div
        data-panel="true"
        data-testid="react-use-id-2"
        id="react-use-id-2"
        style="min-height: 0px; max-height: 100%; height: auto; min-width: 0px; max-width: 100%; width: auto; border: 0px; padding: 0px; margin: 0px; display: flex; flex: 48.426 1 0px; overflow: visible;"
      >
        <div
          style="max-height: 100%; max-width: 100%; flex-grow: 1; overflow: auto; touch-action: pan-y;"
        >
          <div
            class="Flex-module_flex"
            style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: center; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
            tabindex="0"
          >
            LEFT CONTENT
          </div>
        </div>
      </div>
      <div
        aria-controls="react-use-id-2"
        aria-label="Click or drag to expand"
        aria-orientation="vertical"
        aria-valuemax="96.852"
        aria-valuemin="0"
        aria-valuenow="48.426"
        class="SeparatorView-module_separator Separator"
        data-separator="inactive"
        data-separator-type="border"
        data-testid="react-use-id-3"
        id="react-use-id-3"
        role="separator"
        style="flex: 0 0 auto; touch-action: none;"
        tabindex="0"
      >
        <div
          class="SeparatorView-module_activeSeparatorContainer"
        >
          <div
            class="SeparatorView-module_activeSeparator"
          />
        </div>
      </div>
      <div
        data-panel="true"
        data-testid="react-use-id-4"
        id="react-use-id-4"
        style="min-height: 0px; max-height: 100%; height: auto; min-width: 0px; max-width: 100%; width: auto; border: 0px; padding: 0px; margin: 0px; display: flex; flex: 51.574 1 0px; overflow: visible;"
      >
        <div
          style="max-height: 100%; max-width: 100%; flex-grow: 1; overflow: auto; touch-action: pan-y;"
        >
          <div
            class="Flex-module_flex"
            style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: center; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
          >
            MAIN CONTENT
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
